add_executable(standard_scaler_test standard_scaler_test.cpp)
target_link_libraries(standard_scaler_test tudat-learn Eigen3::Eigen)
add_test(NAME standard_scaler_test COMMAND standard_scaler_test)

add_executable(minmax_scaler_test minmax_scaler_test.cpp)
target_link_libraries(minmax_scaler_test tudat-learn Eigen3::Eigen)
add_test(NAME minmax_scaler_test COMMAND minmax_scaler_test)